@@ -14,6 +14,7 @@ linux (4.6.1-1~exp1) UNRELEASED; urgency=medium
   * linux-image: Make a newly installed kernel the default if the package
     was previously removed
   * mtd: Disable slram and phram when securelevel is enabled
+  * debian/patches/features/all/rt/genpatch.py: Use Python 3
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 04 Jun 2016 18:33:11 +0100
 
